# fractals-cpp

./: .gitignore  CMakeLists.txt  config.json  fractals3  readme.md
config/: config-julia.json  config-mandelbrot.json
src/: defaults.h  main.cpp
src/algorithms/: Algorithm.h  AlgorithmFactory.h  Julia.h  Mandelbrot.h
src/collections/: ComplexGrid.h  Grid.h  GridFactory.h
src/colorSchemes/: ColorScheme.h  ColorSchemeFactory.h  GrayscaleScheme.h
src/configuration/: Configuration.h  ConfigurationFactory.h  ConfigurationJSON.h
src/outputs/: Output.h  OutputBitmap.h  OutputFactory.h
